<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/joke_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/refreshButton"
        android:gravity="center"
        android:text="TextView" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next Joke"
        android:layout_above="@+id/shareButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ToggleButton
        android:id="@+id/likeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=":-)"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="204dp"
        android:layout_marginEnd="204dp" />
    <Button android:id="@+id/shareButton"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="Share"
        android:layout_above="@+id/likeButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/favouritesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Favourites"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="203dp"
        android:layout_marginStart="203dp" />

</RelativeLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:conteandrewmcglynn86.badjokes.activities.MainActivityvity">-->

    <!--<TextView-->
    <!--android:id="@+id/andrew"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="272dp" />-->

    <!--<Button-->
    <!--android:id="@+id/refreshButton"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="100dp" />-->
    <!--</android.support.design.widget.CoordinatorLayout>-->